frontend/25zeppelindeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zeppelin
  namespace: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: zeppelin
    spec:
      containers:
        - name: zeppelin
          image: projectepic/zeppelin-cassandra:1.0.6
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /zeppelin/
              port: 8080
          volumeMounts:
            - name: datadir
              mountPath: /opt/zeppelin/notebook/
      volumes:
      #- name: conf
      #  emptyDir: {}
        - name: datadir
          persistentVolumeClaim:
            claimName: zeppelin-notebooks
