frontend/50eventmanagerdeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eventmanager-ui
  namespace: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eventmanager-ui
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: eventmanager
        image: projectepic/eventmanager-ui:1.1.8
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - name: datadir
          mountPath: /code/db
      volumes:
      #- name: conf
      #  emptyDir: {}
      - name: datadir
        persistentVolumeClaim:
          claimName: eventmanager-db
