frontend/20zeppelinservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: zeppelin
  namespace: frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    component: zeppelin
    # type: NodePort
  type: LoadBalancer
