frontend/27sparkmaster-extservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: frontend
spec:
  type: ExternalName
  externalName: spark-master.cassandra.svc.cluster.local
  ports:
    - port: 7077
      targetPort: 7077
      name: spark
    - port: 8080
      targetPort: 8080
      name: http
    - port: 8888
      targetPort: 8888
      name: spark-1
    - port: 8081
      targetPort: 8081
      name: spark-2
