frontend/30eventmanagerservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventmanager
  namespace: frontend
spec:
  # In a production setup, we recommend accessing Grafana through an external Loadbalancer
  # or through a public IP.
  type: LoadBalancer
  # You could also use NodePort to expose the service at a randomly-generated port
  # type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: eventmanager-ui
